# FourFury

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.docker  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
backend/docs/: openapi.json
backend/src/fourfury/: cache.py  constants.py  core.py  main.py  run.py  session.py  settings.py
backend/src/fourfury/ai/: engine.py
backend/src/fourfury/api/: crud.py  fields.py  matchmaking.py  models.py  serializers.py  socketio_manager.py  utils.py  views.py  websocket.py
backend/src/fourfury/db/: client.py  utils.py
backend/tests/: test_core.py
frontend/: .env.docker  .example.env.local  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/: constants.tsx  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/games/[id]/: page.tsx
frontend/src/app/games/[id]/join/: page.tsx
frontend/src/app/modes/: page.tsx
frontend/src/components/: ExitWarningDialog.tsx  GameBoard.tsx  GameInfo.tsx  GameStatus.tsx  WaitingPlayerToJoin.tsx  buttons.tsx  errors.tsx  input.tsx  mode-button.tsx  theme-button.tsx
frontend/src/hooks/: useGamePresence.tsx  useGameRematch.tsx
frontend/src/types/: error.ts
frontend/src/utils/: errorHandler.ts  localStorageUtils.tsx
nginx/: nginx.conf
